--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
   "devDependencies": {
     "jest": "^27.0.6",
     "supertest": "^6.1.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
