--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "githubactionscicd",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "DevSecOps Pipeline Demo",
+  "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test:integration": "jest --config jest.integration.config.js"
+    "test": "jest --detectOpenHandles --forceExit",
+    "test:watch": "jest --watch"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.1",
-    "helmet": "^8.0.0"
+    "express": "^4.17.1",
+    "helmet": "^4.6.0"
   },
   "devDependencies": {
     "jest": "^27.0.6",
@@ -21,6 +18,7 @@
   },
   "jest": {
     "testEnvironment": "node",
+    "testMatch": ["**/tests/**/*.test.js"],
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ]
